[package]
name = "libesedb"
version = "0.2.3"
license = "LGPL-3.0-or-later"
description = "A safe Rust API for libesedb"
documentation = "https://docs.rs/libesedb"
repository = "https://github.com/sunsetkookaburra/rust-libesedb"
readme = "README.md"
keywords = ["libesedb", "esent", "edb", "jet-blue", "ese"]
categories = ["database"]
edition = "2021"

[dependencies]
libesedb-sys = { path = "libesedb-sys", version = "0.1.2" }
time = { version = "0.3.20", features = ["formatting", "macros"] }
