[package]
name = "libesedb"
version = "0.2.5"
license = "LGPL-3.0-or-later"
description = "A safe Rust API for libesedb"
documentation = "https://docs.rs/libesedb"
repository = "https://github.com/sunsetkookaburra/libesedb-rs"
readme = "README.md"
keywords = ["libesedb", "esent", "edb", "jet-blue", "ese"]
categories = ["database"]
edition = "2021"

[dependencies]
libesedb-sys = { path = "libesedb-sys", version = "0.2.0" }
time = { version = "0.3.41", features = ["formatting", "macros", "local-offset"] }
anyhow = { version = "1.0.98", optional = true }
clap = { version = "4.5.37", features = ["derive"], optional = true }
gluesql = { version = "0.15", optional = true }
rusqlite = { version = "0.35.0", features = ["bundled"], optional = true }

[dev-dependencies]
humansize = "2.1.3"
input-macro = "0.2.0"
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
gluesql = "0.15"

[features]
default = []
gluesql = ["dep:gluesql"]
bin = ["dep:anyhow", "dep:clap", "dep:rusqlite"]

[[bin]]
name = "esedb"
required-features = ["bin"]
