[package]
name = "libesedb-sys"
version = "0.1.1"
license = "LGPL-3.0-or-later"
description = "libesedb FFI bindings for Rust"
documentation = "https://docs.rs/libesedb-sys"
repository = "https://github.com/sunsetkookaburra/rust-libesedb"
readme = "README.md"
keywords = ["libesedb", "esent", "edb", "jet-blue", "ese"]
categories = ["external-ffi-bindings", "database"]
edition = "2021"
links = "esedb"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
walkdir = "2"
